guacamole/guacamole-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: guacamole
  labels:
    name: guacamole
